Added Authentication and Authorization with Auth0

--- a/Blazor.Blog/Blazor.Blog.csproj
+++ b/Blazor.Blog/Blazor.Blog.csproj
@@ -10,6 +10,7 @@
     <ProjectReference Include="..\Blazor.Blog.Client\Blazor.Blog.Client.csproj" />
     <ProjectReference Include="..\Data\Data.csproj" />
     <ProjectReference Include="..\SharedComponents\SharedComponents.csproj" />
+    <PackageReference Include="Auth0.AspNetCore.Authentication" Version="1.4.1" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="8.0.4" />
   </ItemGroup>
 
