--- a/Blazor.Blog/appsettings.Development.json
+++ b/Blazor.Blog/appsettings.Development.json
@@ -4,5 +4,9 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "Auth0": {
+    "Authority": "Get this from the domain for your application at Auth0",
+    "ClientId": "Get this from Auth0 setting"
   }
 }
