--- a/Blazor.Blog/appsettings.json
+++ b/Blazor.Blog/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Auth0": {
+    "Authority": "Get this from the domain for your application at Auth0",
+    "ClientId": "Get this from Auth0 setting"
+  }
 }
